Adding preliminary plots

--- a/climate_analyses.ipynb
+++ b/climate_analyses.ipynb
@@ -2368,7 +2368,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plots"
+    "## Plots\n",
+    "Color palettes: https://python-graph-gallery.com/100-calling-a-color-with-seaborn/  \n",
+    "Plot types: https://seaborn.pydata.org/tutorial/regression.html  \n",
+    "Data distribution visuals: https://seaborn.pydata.org/generated/seaborn.jointplot.html  \n",
+    "Note — by default, shaded areas of the plot represent the 95% confidence interval for (the slope of) that regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Washington (WA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Climate-related regressions for counties in WA"
    ]
   },
   {
@@ -2376,7 +2394,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Regression lines are color-coded by county\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kansas (KS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Climate-related regressions for counties in KS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Regression lines are color-coded by county\n"
+   ]
   }
  ],
  "metadata": {
