--- a/model.ipynb
+++ b/model.ipynb
@@ -314,7 +314,24 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Exploding nested pie chart\n",
+    "\n",
+    "explode = [0.2*i for i in len(sizes)*[1]] \n",
+    "explode_types = [0.1*i for i in len(sizes_types)*[1]] \n",
+    "\n",
+    "plt.pie(sizes, explode=explode, labels=labels, colors=colors, startangle=90, frame=True, textprops={'fontsize': 7})\n",
+    "plt.pie(sizes_types, explode=explode_types, labels=labels_types, colors=colors_types, radius=0.75, startangle=90, textprops={'color':'white', 'fontsize':6})\n",
+    "centre_circle = plt.Circle((0,0), 0.5, color='black', fc='white', linewidth=0)\n",
+    "\n",
+    "fig = plt.gcf()\n",
+    "fig.gca().add_artist(centre_circle)\n",
+    "plt.rcParams['patch.linewidth'] = 0.25\n",
+    "plt.axis('equal')\n",
+    "plt.title('Causes of Loss')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -333,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
