--- a/test_data_analyses.ipynb
+++ b/test_data_analyses.ipynb
@@ -798,7 +798,9 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
